Painting in 3D view produces gap at seams, or wont paint at all. #44344

Closed
opened 2015-04-10 21:08:45 +02:00 by Olson Burry · 9 comments

System Information
Linux Mint (cinnamon) 17.1 64bit
16GB RAM
GTX970
official

Blender Version
Broken: 2.70 - 2.74 current master (from today)
Worked: couldn't find one.

Short description of error

Painting at some zoom levels produces a visible gap in the texture paint where seams fall on the 3D object.

Exact steps for others to reproduce the error

Open the .blend file attached and paint a stroke across the object. There should appear a line at the edge with the seam on. Looking in the UV image editor at this place it the pixels appear offset by 1 ( dont think related to #44308 ?)

I can turn off occlude, cull, normal, I've tried setting the bleed higher and lower to no avail I'm afraid.

Note that if the view is zoomed in too far, the paint doesn't seem to work at all, and it's zooming out just enough that the paint begins to work where the issue on the seams becomes most apparent. Ortho view seems kind of ok, though.

Thank you kindly.

pixeloff.jpg

bugtest.blend

**System Information** Linux Mint (cinnamon) 17.1 64bit 16GB RAM GTX970 official **Blender Version** Broken: 2.70 - 2.74 current master (from today) Worked: couldn't find one. **Short description of error** Painting at some zoom levels produces a visible gap in the texture paint where seams fall on the 3D object. **Exact steps for others to reproduce the error** Open the .blend file attached and paint a stroke across the object. There should appear a line at the edge with the seam on. Looking in the UV image editor at this place it the pixels appear offset by 1 ( dont think related to #44308 ?) I can turn off occlude, cull, normal, I've tried setting the bleed higher and lower to no avail I'm afraid. Note that if the view is zoomed in too far, the paint doesn't seem to work at all, and it's zooming out just enough that the paint begins to work where the issue on the seams becomes most apparent. Ortho view seems kind of ok, though. Thank you kindly. ![pixeloff.jpg](https://archive.blender.org/developer/F160663/pixeloff.jpg) [bugtest.blend](https://archive.blender.org/developer/F160665/bugtest.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn
Antonis Ryakiotakis was assigned by Sergey Sharybin 2015-04-14 11:33:46 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Antony, mind having a look? Thanks! :)

Antony, mind having a look? Thanks! :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Looked into this report and fixed some related issues.

Need to investigate further, but this looks to be a problem converting the bucket bounds from screenspace into UV space.

See:

  fac1 = line_point_factor_v2(bucket_clip_edges[0], vCoSS[fidx1], vCoSS[fidx2]);
  fac2 = line_point_factor_v2(bucket_clip_edges[1], vCoSS[fidx1], vCoSS[fidx2]);

It looks like we better un-project these values so the factor can be calculated without the perspective matrix causing problems.

Looked into this report and fixed some related issues. - 9207c8d669 - 1a0fb7e9ae - a050d6063c - 3e782756e3 Need to investigate further, but this looks to be a problem converting the bucket bounds from screenspace into UV space. See: ``` fac1 = line_point_factor_v2(bucket_clip_edges[0], vCoSS[fidx1], vCoSS[fidx2]); fac2 = line_point_factor_v2(bucket_clip_edges[1], vCoSS[fidx1], vCoSS[fidx2]); ``` It looks like we better un-project these values so the factor can be calculated without the perspective matrix causing problems.

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong

This issue was referenced by 37f4660637

This issue was referenced by 37f46606374f37dbe73c3555dc04c96a56e90bf3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44344
No description provided.