Fix T44344: paint bleed fails in perspective view